[package]
name    = "krill_daemon"
version = "0.2.0"
authors = ["Tim Bruijnzeels <tim@nlnetlabs.nl>", "Martin Hoffmann <martin@nlnetlabs.nl>"]
build   = "build-ui.rs"

[dependencies]
actix-web       = { version = "0.7.19", features = ["alpn"] }
base64          = "^0.9"
bcder           = "^0.3"
bytes           = "^0.4"
clokwerk        = "^0.1"
chrono          = { version = "^0.4", features = ["serde"] }
clap            = "^2.32"
derive_more     = "^0.13"
fern            = "^0.5"
futures         = "0.1"
hex             = "^0.3"
lazy_static     = "^1.1"
log             = "^0.4"
openssl         = { version = "^0.10", features = ["v110"] }
pretty          = "0.5.2"
rand            = "^0.5"
reqwest         = "^0.9"
rpki            = "^0.4"
serde           = { version = "^1.0", features = ["derive"] }
serde_json      = "^1.0"
syslog          = "^4.0"
toml            = "^0.4"
tokio           = "^0.1"
uuid            = "0.7"
xml-rs          = "0.8.0"

[build-dependencies]
ignore          = "^0.4"

[dependencies.krill_ca]
path = "../ca"
version = "0.2.0"

[dependencies.krill_client]
path = "../client"
version = "0.2.0"

[dependencies.krill_cms_proxy]
path = "../cms_proxy"
version = "0.2.0"

[dependencies.krill_commons]
path = "../commons"
version = "0.2.0"

[dependencies.krill_pubc]
path = "../pubc"
version = "0.2.0"

[dependencies.krill_pubd]
path = "../pubd"
version = "0.2.0"