[package]
name    = "krill_pubc"
version = "0.2.0"
authors = ["Tim Bruijnzeels <tim@nlnetlabs.nl>", "Martin Hoffmann <martin@nlnetlabs.nl>"]

[dependencies]
clap            = "^2.32"
derive_more     = "^0.13"
krill_commons   = "^0.2"
rpki            = "^0.3"
serde           = { version = "^1.0", features = ["rc"] }
serde_derive    = "^1.0"
serde_json      = "^1.0"

[dependencies.krill_cms_proxy]
path = "../cms_proxy"
version = "0.2.0"

