[package]
name    = "krill_pubc"
version = "0.1.0"
authors = ["Tim Bruijnzeels <tim@nlnetlabs.nl>", "Martin Hoffmann <martin@nlnetlabs.nl>"]

[dependencies]
clap            = "^2.32"
derive_more     = "^0.13"
rpki            = "^0.5"
serde           = { version = "^1.0", features = ["derive"] }
serde_json      = "^1.0"

[dependencies.krill_commons]
path = "../commons"
version = "0.1.0"

