[package]
name    = "krill_pubd"
version = "0.2.0"
authors = ["Tim Bruijnzeels <tim@nlnetlabs.nl>", "Martin Hoffmann <martin@nlnetlabs.nl>"]

[dependencies]
bytes           = "^0.4"
derive_more     = "^0.13"
rand            = "^0.5"
rpki            = "^0.4"
serde           = { version = "^1.0", features = ["rc"] }
serde_derive    = "^1.0"

[dependencies.krill_commons]
path = "../commons"
version = "0.2.0"