[package]
name    = "krill_pubd"
version = "0.2.0"
authors = ["Tim Bruijnzeels <tim@nlnetlabs.nl>", "Martin Hoffmann <martin@nlnetlabs.nl>"]

[dependencies]
bytes           = "^0.4"
chrono          = "^0.4"
derive_more     = "^0.13"
rand            = "^0.5"
rpki            = "^0.5"
serde           = { version = "^1.0", features = ["derive"] }

[dependencies.krill_commons]
path = "../commons"
version = "0.2.0"